--- a/inc/footer.html
+++ b/inc/footer.html
@@ -3,15 +3,15 @@
     <footer class="footer">
       <div class="container">
         <p>
-        VPHAS+ is an <a href="http://www.eso.org/sci/observing/PublicSurveys/sciencePublicSurveys.html">ESO Public Survey</a> using the <a href="http://www.astro-wise.org/~omegacam">OmegaCAM instrument</a> on the <a href="http://vstportal.oacn.inaf.it/">VLT Survey Telescope (VST)</a>.
-        <br/>
+          VPHAS+ is an <a href="http://www.eso.org/sci/observing/PublicSurveys/sciencePublicSurveys.html">ESO Public Survey</a> using <a href="http://www.astro-wise.org/~omegacam">OmegaCAM</a> on the <a href="http://vstportal.oacn.inaf.it/">VLT Survey Telescope</a>.
+          
+          It is the southern counterpart to <a href="http://www.iphas.org">IPHAS</a> and <a href="https://www.astro.ru.nl/uvex/">UVEX</a>.
+          <br/>
           This website is hosted by the <a href="http://www.herts.ac.uk/research/stri/research-areas/car.html">Centre for Astrophysics Research</a>,
           University of Hertfordshire, UK.
         </p>
         <p>
-          <a href="/people.shtml">Contact</a> &nbsp;&middot;&nbsp;
-          <a href="http://www.iphas.org">IPHAS</a> &nbsp;&middot;&nbsp;
-          <a href="https://www.astro.ru.nl/uvex/">UVEX</a> &nbsp;&middot;&nbsp;
+          <a href="/people.shtml">Contact details</a> &nbsp;&nbsp;&middot;&nbsp;&nbsp;
           <a href="/consortium">Consortium area</a>
         </p>
       </div>
@@ -21,5 +21,16 @@
     <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="/assets/js/egaps.js"></script>
+
+    <!-- Collect visitor statistics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-69171-4', 'vphas.eu');
+      ga('send', 'pageview');
+    </script>
 
     <!--end inc/footer.html-->
