--- a/inc/head.html
+++ b/inc/head.html
@@ -1,10 +1,11 @@
-
+    
+    <!-- Crafted with love by Geert Barentsen -->
     <!--begin inc/head.html-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="The VST/OmegaCAM Photometric H-Alpha Survey (VPHAS+) is imaging the Southern Milky Way in visible light using the ESO VLT Survey Telescope (VST) in Chile.">
+    <meta name="author" content="VPHAS+ team">
     <link rel="shortcut icon" href="favicon.ico">
 
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
