Added favicon link

--- a/inc/head.html
+++ b/inc/head.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The VST/OmegaCAM Photometric H-Alpha Survey (VPHAS+) is imaging the Southern Milky Way in visible light using the ESO VLT Survey Telescope (VST) in Chile.">
     <meta name="author" content="VPHAS+ team">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/bootstrap-theme.min.css" rel="stylesheet">
